2004-03-02  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/recache.c: Beautify (functionally no change)

2004-03-02  Kouji 'kekyo' Suzuki <k@kekyo.net>

	* configs/msc7-project.zip:
	  Fix about Windows Installer.

2004-03-02  mput <root@mput.dip.jp>

	* timidity/output.h, timidity/common.h, timidity/readmidi.h,
	  timidity/miditrace.h: Fix #inlude dependencies

2004-03-02  Saito <saito@intaa.net>

	* timidity/playmidi.c, timidity/readmidi.[ch],
	  timidity/reverb.[ch], timidity/effect.c, timidity/tables.[ch]:
	  Under construction for XG insertion / variation / system effects.

2004-03-02  Kentaro Sato <kentaro@ranvis.com>

	* timidity/playmidi.c: Fixed to set drumch on program change (GM2).

2004-03-01  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* README(.ja), INSTALL(.ja),
	  doc/C/timidity.1, doc/ja_JP.ujis/timidity.1,
	  doc/ja_JP.ujis/README.m2m: Update

2004-03-01  Saito <saito@intaa.net>

	* timidity/w32g_subwin3.c:
	  Fix Win32GUI tracer window.

2004-02-29  mput <root@mput.dip.jp>

	* configure.in: version to 2.13.0-rc2

2004-02-29  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* doc/ja_JP.ujis/README.dl:
	  Was written in iso-2022-jp, convert to eucJP
	* doc/C/README.mts, doc/ja_JP.ujis/README.mts: Add
	* doc/C/Makefile.{am,in}, doc/ja_JP.ujis/Makefile.{am,in}:
	  Fix to fit with change above

2004-02-29  Saito <saito@intaa.net>

	* interface/w32g_tracer.bmp:
	  Fix.
	* timidity/playmidi.c:
	  Fix sostenuto and redamper.

2004-02-28  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* AUTHORS: Update
	* interface/Makefile.{am,in}: Fix due to make dist
	* doc/C/timidity.1, doc/ja_JP.ujis/timidity.1,
	  doc/C/timidity.cfg.5, doc/ja_JP.ujis/timidity.cfg.5: Update
	* doc/m2m.txt: Move to doc/C/README.m2m
	* doc/ja_JP.ujis/README.m2m: Add
	* doc/Makefile.{am,in}, doc/C/Makefile.{am,in},
	  doc/ja_JP.ujis/Makefile.{am,in}: Fix to fit with change above
	* script/Makefile.{am,in}, script/lspatch.pl: Fix a little

2004-02-28  Saito <saito@intaa.net>
